<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorsiren"
    tools:context=".Service">



    <TextView
        android:id="@+id/present"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/repair"
        app:layout_constraintTop_toBottomOf="@+id/repair" />

    <ImageView
        android:id="@+id/repair"
        android:src="@drawable/repair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/unknown"
       android:src="@drawable/kulschrank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/present"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/send"
        app:layout_constraintTop_toBottomOf="@id/unknown" />

    <ImageView
        android:id="@+id/IT"
        android:src="@drawable/it"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/send"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/learn"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/IT"
        app:layout_constraintTop_toBottomOf="@id/IT" />






</androidx.constraintlayout.widget.ConstraintLayout>