<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/enjo"
    tools:context=".product">


    <ImageView
        android:id="@+id/hp"
        android:src="@drawable/laptop"
        android:layout_width="130dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:src="@drawable/legion"
        android:id="@+id/legion"
        android:layout_width="130dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/hp"
        android:layout_marginStart="10dp"/>


    <ImageView
        android:src="@drawable/samsung"
        android:id="@+id/samsung"
        android:layout_width="130dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/legion"
        android:layout_marginStart="10dp"/>






    <TextView
    android:id="@+id/present"
        android:layout_marginTop="10dp"
    android:textSize="20dp"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:text="@string/laptop_hp"
    app:layout_constraintTop_toBottomOf="@id/hp"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginStart="10dp"
    android:textColorHighlight="@color/colorPrimaryDark" />


    <TextView
        android:id="@+id/presen2"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/legion_price_700"
        app:layout_constraintTop_toBottomOf="@id/legion"
        app:layout_constraintStart_toStartOf="@id/present"
        android:layout_marginStart="150dp"
        android:textColorHighlight="@color/colorPrimaryDark" />


    <TextView
        android:id="@+id/presen3"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/lap_top_samsung_price_1000"
        app:layout_constraintTop_toBottomOf="@id/samsung"
        app:layout_constraintStart_toStartOf="@id/presen2"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="10dp"
        android:textColorHighlight="@color/colorPrimaryDark"
        />

    <ImageView
        android:id="@+id/electr"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/unnamed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="@id/presen2" />












</androidx.constraintlayout.widget.ConstraintLayout>